objects/Training_Session__c.object
<CustomObject>
    <fields>
        <fullName>Avg_Rating__c</fullName>
        <label>Avg Rating</label>
        <summarizedField>Feedback__c.Rating__c</summarizedField>
        <summaryForeignKey>Feedback__c.Sessions__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Count_Attendee__c</fullName>
        <label>Count Attendee</label>
        <summaryForeignKey>Attendee__c.Training__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Loaction__c</fullName>
        <label>Loaction</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Locate__c</fullName>
        <label>Locate</label>
        <scale>2</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>Rating_Avg_Result__c</fullName>
        <formula>Avg_Rating__c  /  Sum_feed__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Rating Avg Result</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Record_value__c</fullName>
        <label>Session</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Session_Date__c</fullName>
        <label>Session Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Sum_feed__c</fullName>
        <label>Sum feed</label>
        <summaryForeignKey>Feedback__c.Sessions__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Training Session</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Count_Attendee__c</columns>
        <columns>Record_value__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>Loaction__c</columns>
        <filterScope>ScopingRule</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Change_Owner_Queue_Training_Session</fullName>
        <filterScope>Queue</filterScope>
        <label>Change Owner Queue</label>
        <queue>Change_Owner_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Training Sessions</pluralLabel>
    <recordTypes>
        <fullName>Webinar</fullName>
        <active>true</active>
        <label>Webinar</label>
    </recordTypes>
    <recordTypes>
        <fullName>Workshop</fullName>
        <active>true</active>
        <label>Workshop</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Ensure_Future</fullName>
        <active>true</active>
        <errorConditionFormula>Session_Date__c    &lt;=   TODAY()</errorConditionFormula>
        <errorMessage>Today</errorMessage>
    </validationRules>
</CustomObject>